
What's new in version 0.16:

  You may now tie an array to an already-opened seekable filehandle,
  rather than to a filename.

  More tests.

  Bug fix in STORE: It wasn't tracking the cache size correctly

  Bug fix in DELETE: it wasn't adjusting the offsets, cache, and LRU
  tables correctly when deleting the last record in the file.

What's new in version 0.15:

  Fixed bug in POP of empty file.

  SPLICE now defaults its arguments correctly.

  test suite and ->_integrity now borrow the object's internal
  filehandle instead of opening new ones; this may improve portability
  of the test suite.

  License is now "Same terms as Perl" instead of GPL.

What's new in version 0.14:

  Added ->flock method for locking the handle.

  Added PUSH, POP, SHIFT, UNSHIFT, CLEAR, EXTEND,  DELETE and EXISTS methods.

  Handling of negative position argument to 'SPLICE' is now correct.
  Return of SPLICE in scalar context is now correct.

What's new in version 0.13:

  Added binmode() calls in tests to support Win32 etc.

What's new in version 0.12:

  Trivial change to get SEEK_SET from POSIX instead of Fcntl.

What's new in version 0.11:

  Test suite now more portable; added tests for 'recsep' option.

What's new in version 0.10:

  SPLICE method supported.  Many minor changes.

What's new in version 0.02:

  STORESIZE method implements $#array = $n.

What's new in version 0.01:

  This is the initial release.
