@@ -1,4 +1,12 @@
 
+What's new in version 0.18:
+
+  No significant changes.  (Upload to force CPAN module database to update.)
+
+What's new in version 0.17:
+
+  Minor cleanups and test improvements for release with Perl 5.7.3.
+
 What's new in version 0.16:
 
   You may now tie an array to an already-opened seekable filehandle,
